# sparql-conformance

./: .gitignore  QLEVER_CONTROL_GETTING_STARTED.md  README.md  main.py  pyproject.toml  requirements.txt  testsuite.py
.github/workflows/: ci.yml
backend/: config_manager.py  models.py  protocol_tools.py  qlever_manager.py
src/: config.py  console_report.py  extract_tests.py  json_tools.py  protocol_tools.py  rdf_tools.py  test_object.py  testsuite.py  tsv_csv_tools.py  util.py  xml_tools.py
src/engines/: README.md  engine_manager.py  qlever-binaries-manager-reset.py  qlever-binaries-manager.py
src/sparql_conformance/: README.md  __main__.py  config.py  console_report.py  dataset_tools.py  docker-compose.yml  extract_tests.py  integrated_main.py  main.py  protocol_request.py  protocol_tools.py  qlever_control.py  qleverfile.py  rdf_tools.py  result_set_tools.py  runner.py  test_object.py  testsuite.py  util.py  xml_tools.py
src/sparql_conformance/Qleverfiles/: Qleverfile.blazegraph  Qleverfile.graphdb  Qleverfile.jena  Qleverfile.mdb  Qleverfile.oxigraph  Qleverfile.qlever  Qleverfile.virtuoso
src/sparql_conformance/commands/: analyze.py  test.py
src/sparql_conformance/engines/: README.md  __init__.py  blazegraph_manager.py  engine_manager.py  graphdb_manager.py  jena_manager.py  mdb_manager.py  oxigraph_manager.py  qlever-binaries-manager-reset.py  qlever-binaries-manager.py  qlever.py  rdflib_manager.py  virtuoso_manager.py
test/: test_blazegraph_templates.py  test_bug_regressions.py  test_dataset_tools.py  test_e2e_rdflib.py  test_extract_tests.py  test_graph_store_defaults.py  test_json_tools.py  test_manager_graph_iris.py  test_optional_qlever_control.py  test_protocol_tools.py  test_rdf_tools.py  test_result_set_tools.py  test_test_suites.py  test_tsv_csv_tools.py  test_xml_tools.py
test/fixtures/mini-suite/: ask-true.rq  ask-true.ttl  construct-basic.rq  construct-basic.ttl  data.ttl  manifest.ttl  select-basic.rq  select-basic.srx  select-basic.ttl  select-int.rq  select-int.srj  syntax-bad.rq  update-insert-result.ttl  update-insert.ru
